--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -31,6 +31,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Markdown to HTML
+        uses: ZacJW/markdown-html-action@1.1.0
+        with:
+          input_files: '["README*.md"]'
+          output_files: '["index.html"]'
+          packages: 'pymdown-extensions'
+          extensions: '["pymdownx.extra"]'
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
@@ -41,15 +48,3 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
-      - name: Markdown-HTML
-        # You may pin to the exact commit or the version.
-        # uses: ZacJW/markdown-html-action@581e6df07c787a1eb980cb2fd6c0c82ace9c9c82
-        uses: ZacJW/markdown-html-action@1.2.0
-        with:
-          # A JSON list of a list of paths to markdown files to render in to HTML files
-          input_files: README.md 
-          # A JSON list of paths to save the rendered HTML files to
-          output_files: index.html
-          # (boolean) Whether or not a file should be automatically excluded from being included more than once in a given output file
-          exclude_duplicates: false
-          # An optional path to a CSS file that will be included as a <style> block in every output file
