--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Markdown to HTML
         uses: ZacJW/markdown-html-action@1.1.0
         with:
-          input_files: '["README*.md"]'
+          input_files: '[["README*.md"]]'
           output_files: '["index.html"]'
           packages: 'pymdown-extensions'
           extensions: '["pymdownx.extra"]'
